--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@prisma/client": "^5.10.2",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "^5.1.1",
     "next": "14.1.0",
+    "pothos": "^0.0.1",
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18"
