--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.9.5",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@prisma/client": "^5.10.2",
+    "@prisma/extension-accelerate": "^0.6.3",
     "graphql": "^16.8.1",
     "graphql-yoga": "^5.1.1",
     "next": "14.1.0",
