--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.5",
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.10.2",
     "@prisma/extension-accelerate": "^0.6.3",
-    "graphql": "^16.8.1",
-    "graphql-yoga": "^5.1.1",
+    "framer-motion": "^11.0.8",
     "next": "14.1.0",
-    "pothos": "^0.0.1",
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18"
@@ -26,8 +27,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
